opam-version: "1.2"
name: "lisp_re"
version: "0.0.1"
maintainer: "James Friend <james@jsdf.co>"
authors: [
  "James Friend <james@jsdf.co>"
]
license: "BSD"
homepage: "https://github.com/jsdf/lisp.re"
doc: "https://github.com/jsdf/lisp.re/"
bug-reports: "https://github.com/jsdf/lisp.re/issues"
dev-repo: "git://github.com/jsdf/lisp.re.git"
tags: [ "reason" "lisp" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "reason"  {= "2.0.0"}
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.05" ]
